<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txtSignIn"
        android:textSize="25dp">

    </TextView>
    <ImageView
        android:id="@+id/imageview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@android:drawable/ic_lock_power_off"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtUseremail" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/txtPass" />

    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtForgotpass"
        android:textSize="15dp">

    </TextView>

    <Button
        android:id="@+id/SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="#4CAF50"
        android:text="@string/txtSignIn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txtOr"
        android:textSize="25dp" />

    <Button
        android:id="@+id/SignInGG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="#F44336"
        android:text="@string/btnSignInG" />

    <Button
        android:id="@+id/SignInFB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:background="#2196F3"
        android:text="@string/btnSignInF" />

    <Button
        android:id="@+id/SignInApple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnSignInA"
        android:background="#698398"
        android:layout_margin="5dp" />
    <TextView
        android:id="@+id/gotosignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txtSignUp"
        android:textSize="20dp"
        android:clickable="true"/>
</LinearLayout>