<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Modules.Setting.ChangePasswordFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/changePass"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#0277BD"
            android:textAlignment="center"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/black">
        <EditText
            android:id="@+id/currentpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/currentpass"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/white" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/white" />
        <EditText
            android:id="@+id/newpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newpass"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/white" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/white" />
        <EditText
            android:id="@+id/confirmpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmpass"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/white" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/white" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/txtSave" />
    </LinearLayout>

</FrameLayout>