<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    tools:context=".Modules.Home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/top_home_fragment" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/NLP"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/ic_launcher_background" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/Pronunciation"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/ic_launcher_background" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/Conversation"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/ic_launcher_background" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txtNLP"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txtPronunciation"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txtConversation"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/Training"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/ic_launcher_background" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/Course"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/ic_launcher_background" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/Tutorial"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:clickable="true"

                    android:src="@drawable/ic_launcher_background" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txtTraining"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txtCourse"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txtTutorial"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/txtTopvideo"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <com.google.android.exoplayer2.ui.PlayerView
                    android:id="@+id/player_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@color/black"
                    app:controller_layout_id="@layout/custom_controller"
                    app:fastforward_increment="10000"
                    app:hide_on_touch="true"
                    app:player_layout_id="@layout/exo_simple_player_view"
                    app:resize_mode="fit"
                    app:rewind_increment="10000"
                    app:show_timeout="5000"
                    app:use_controller="true" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:text="@string/txtFeature"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/seeall"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="right"
                    android:text="@string/seeAll"
                    android:textColor="#F35321"
                    android:textSize="17sp" />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"></androidx.recyclerview.widget.RecyclerView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:text="@string/txtLesson"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="right"
                    android:text="@string/seeAll"
                    android:textColor="#F35321"
                    android:textSize="17sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listLesson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="55dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</FrameLayout>